# myfrac

myfrac/: AUTHORS  Makefile.am  Makefile.in  acinclude.m4  config.h.in  configure  configure.files  configure.in  subdirs
myfrac/admin/: am_edit  cvs.sh
myfrac/doc/: Makefile.in
myfrac/doc/de/: Makefile.am  Makefile.in  index.cache.bz2  index.docbook
myfrac/doc/en/: Makefile.in  index.cache.bz2  index.docbook
myfrac/fraqtive/: Makefile.in
myfrac/fraqtive/src/: Makefile.in  fraqtive.cpp  fraqtive.desktop  fraqtive.h  generator.cpp  generator.h  genthread.cpp  genthread.h  gradbutton.cpp  gradbutton.h  gradeditor.cpp  gradeditor.h  gradient.cpp  gradient.h  gradlist.cpp  gradlist.h  gradwidget.cpp  gradwidget.h  main.cpp  presets.cpp  presets.h  spline.cpp  spline.h  view2d.cpp  view2d.h  view3d.cpp  view3d.h
myfrac/myfrac/: Makefile.in  configure.in.bot  configure.in.in
myfrac/myfrac/src/: Makefile.am  Makefile.in  generator.cpp  generator.h  genthread.cpp  genthread.h  gradbutton.cpp  gradbutton.h  gradeditor.cpp  gradeditor.h  gradient.cpp  gradient.h  gradlist.cpp  gradlist.h  gradwidget.cpp  gradwidget.h  main.cpp  myfrac.cpp  myfrac.desktop  myfrac.h  myfracui.rc  presets.cpp  presets.h  spline.cpp  spline.h  view2d.cpp  view2d.h  view3d.cpp  view3d.h
myfrac/myfrac/src/pics/: Makefile.am  Makefile.in
myfrac/po/: Makefile.in
myfrac/po/de/: Makefile.in  fraqtive.gmo  fraqtive.po  myfrac.gmo  myfrac.po
myfrac/po/et/: Makefile.in  fraqtive.gmo  fraqtive.po  myfrac.gmo  myfrac.po
myfrac/po/fr/: Makefile.in  fraqtive.gmo  (+3 more)
myfrac/templates/: h
(+41 files in other folders)
